food added & tail is started

--- a/Nibbler/Makefile
+++ b/Nibbler/Makefile
@@ -29,6 +29,7 @@ SRC		=	main.cpp \
 			ECS/Entity.cpp \
 			ECS/Manager.cpp \
 			Components/Snake.cpp\
+			Components/FoodSpawner.cpp\
 			SDLFramework.cpp
 			
 OBJ		=	$(addprefix $(OBJ_DIR), $(SRC:.cpp=.o))
